--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
+    "react-foursquare": "^1.0.3",
     "react-scripts": "1.1.4",
     "yarn": "^1.9.2"
   },
